Vertex Paint - Ctrl for secondary color broken #56994

Closed
opened 2018-10-01 16:53:21 +02:00 by Julien Kaspar · 9 comments
Member

Blender Version
Broken: a3afcae39ed

Short description of error
In Vertex & Texture Paint Mode you can hold Ctrl to paint with a secondary color. This is now not working anymore in Vertex Paint Mode.
When left click select is set as default it will instead select any other object that is also under the cursor.

**Blender Version** Broken: a3afcae39ed **Short description of error** In Vertex & Texture Paint Mode you can hold Ctrl to paint with a secondary color. This is now not working anymore in Vertex Paint Mode. When left click select is set as default it will instead select any other object that is also under the cursor.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Hi Julien,

at first sight, I cant see it being implemented for Vertex paint holding Ctrl. (of course you can flip to secondary color pressing X)
As you say "This is now not working anymore...": do you know, when this was working?

Anyways, having a closer look at code now...

Hi Julien, at first sight, I cant see it being implemented for Vertex paint holding Ctrl. (of course you can flip to secondary color pressing `X`) As you say "This is now not working anymore...": do you know, when this was working? Anyways, having a closer look at code now...
Author
Member

@lichtwerk As far as I remember the implementation of the secondary color and other improvements to the vertex paint mode from Blender 2.79 came into Blender 2.8 slowly and went a bit back & forth of them being properly implemented.
I can't try out some old builds right now but I remember it working just a few weeks back. No specific time though since I don't use it that often lately.

@lichtwerk As far as I remember the implementation of the secondary color and other improvements to the vertex paint mode from Blender 2.79 came into Blender 2.8 slowly and went a bit back & forth of them being properly implemented. I can't try out some old builds right now but I remember it working just a few weeks back. No specific time though since I don't use it that often lately.
Author
Member

I tried out the original implementation in Blender 2.79 and apparently the Ctrl function never worked for VPaint. So this is less a bug report and more a feature request :)

I tried out the original implementation in Blender 2.79 and apparently the Ctrl function never worked for VPaint. So this is less a bug report and more a feature request :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@JulienKaspar: could you try D3753 and see how it goes?

@JulienKaspar: could you try [D3753](https://archive.blender.org/developer/D3753) and see how it goes?
Philipp Oeser self-assigned this 2018-10-02 13:51:54 +02:00

This issue was referenced by blender/blender@7d5fb2e103

This issue was referenced by blender/blender@7d5fb2e103e03046194d69640aadf7e76a700620

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#56994
No description provided.