source/blender/editors/sculpt_paint/paint_vertex.c
@@ -283,11 +283,11 @@ static VPaint *new_vpaint(void)
 	return vp;
 }
 
-uint vpaint_get_current_col(Scene *scene, VPaint *vp)
+uint vpaint_get_current_col(Scene *scene, VPaint *vp, bool secondary)
 {
 	Brush *brush = BKE_paint_brush(&vp->paint);
 	uchar col[4];
-	rgb_float_to_uchar(col, BKE_brush_color_get(scene, brush));
+	rgb_float_to_uchar(col, secondary ? BKE_brush_secondary_color_get(scene, brush) : BKE_brush_color_get(scene, brush));
 	col[3] = 255; /* alpha isn't used, could even be removed to speedup paint a little */
 	return *(uint *)col;
 }
@@ -2521,7 +2521,7 @@ static bool vpaint_stroke_test_start(bContext *C, struct wmOperator *op, const f
 	        &vpd->normal_angle_precalc, vp->paint.brush->falloff_angle,
 	        (vp->paint.brush->flag & BRUSH_FRONTFACE_FALLOFF) != 0);
 
-	vpd->paintcol = vpaint_get_current_col(scene, vp);
+	vpd->paintcol = vpaint_get_current_col(scene, vp, (RNA_enum_get(op->ptr, "mode") == BRUSH_STROKE_INVERT));
 
 	vpd->is_texbrush = !(brush->vertexpaint_tool == PAINT_BLEND_BLUR) && brush->mtex.tex;
 
